@@ -29,8 +29,8 @@ from AccessControl import ClassSecurityInfo
 from Acquisition import aq_base
 
 from Products.CMFCore.utils import getToolByName
-from Products.CMFCore.CMFCorePermissions import View
-from Products.CMFCore.CMFCorePermissions import ModifyPortalContent
+from Products.CMFCore.permissions import View
+from Products.CMFCore.permissions import ModifyPortalContent
 from Products.CMFCore.PortalContent import PortalContent
 from Products.CMFCore.PortalFolder import PortalFolder
 from Products.CMFCore.CMFCatalogAware import CMFCatalogAware
