@@ -9,6 +9,8 @@ Bug fixes:
 - Added the "workflow" class to the document edit form so that comments have the
   same style as those in CPSDefault.
 - Better comments field + help on the document modification form.
+- Use CMFCore.permissions instead of CMFCore.CMFCorePermissions to avoid
+  warnings.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Added a "documentFields" class to group together the fields pertaining to a
